--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,3 +41,15 @@
 		@apply text-base my-1;
 	}
 }
+
+@layer components {
+	.btn {
+		@apply font-bold py-2 px-4 rounded;
+	}
+	.btn-primary {
+		@apply bg-blue-500 text-white;
+	}
+	.btn-primary:hover {
+		@apply bg-blue-700;
+	}
+}
