added monitor imgs, .btn, update Overview

--- a/src/components/offer/homepage/Overview.astro
+++ b/src/components/offer/homepage/Overview.astro
@@ -1,23 +1,18 @@
-<section class="Overview flex gap-4 md:flex-row bg-slate-300">
-	<div class="blurb primary flex-[1.618] space-y-5">
-		<h1 class="text-orange-700">
-			MetaStock - A Global Leader in Market Analysis Tools
-		</h1>
-		<p>
-			MetaStock has been providing award-winning charting and analysis tools for
-			the self-directed trader for over 30 years. Capitalizing on technical
-			analysis, our line of trading software and market data are designed for
-			active traders of all levels so they can backtest, scan and analyze the
-			markets with confidence.
+<section class="Overview flex flex-wrap gap-4 md:flex-row bg-slate-300">
+	<h1 class="text-orange-700 w-full">
+		MetaStock - A Global Leader in Market Analysis Tools
+	</h1>
+	<div class="blurb primary flex-[1.618] p-4 space-y-5">
+		<p class="WTW">
+			MetaStock provides charting and analysis tools for self-directed traders.
+			Our software and market data allow traders to analyze and backtest various
+			markets, including stocks, options, futures, and FOREX. Our signals are
+			reliable and suitable for day, swing, and EOD traders. Try MetaStock and
+			see why it's the best charting software for private traders.
 		</p>
-		<p>
-			The result is buy and sell signals you can count on. We have options for
-			day traders, swing traders and EOD traders to trade stocks, options,
-			futures, FOREX and more. Try MetaStock and we are confident you’ll agree
-			that it’s the best charting software available to the private trader.
-		</p>
-		<div class="cta">
+		<div class="cta flex gap-2 md:flex-row justify-evenly">
 			<a class="btn btn-primary" href="#">Learn more about MetaStock</a>
+			<a class="btn btn-accent" href="#">What's new in MetaStock?</a>
 		</div>
 	</div>
 	<div class="media secondary flex-1">media</div>
